# search_engineering_practice

./: .gitignore  README.md  config.py  database.py  dependencies.py  fastapi_practice.py  main.py  models.py  opensearch_api.py  opensearch_client.py  press_list_api.py  pyproject.toml  schemas.py
